LIKA-516: Fix vertical scrollbars in custom checkbox when using chrome

--- a/ckanext/ckanext-apicatalog/less/multiselect.less
+++ b/ckanext/ckanext-apicatalog/less/multiselect.less
@@ -95,7 +95,7 @@
         font-size: 15px;
         color: @suomifi-highlight-base;
         min-width: 16px;
-        overflow-x: hidden;
+        overflow: hidden;
         justify-content: center;
         align-items: center;
       }
